<resources>
    <string name="app_name">Adacc Cornella</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_altaperro">Nuevo Perro</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Salir</string>
    <string name="title_activity_login">Inicio Sesión</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_clave">Clave</string>
    <string name="action_iniciar_sesion">Iniciar sesión</string>
    <string name="action_limpiar">Limpiar</string>
    <string name="action_recordar">Recordar credenciales</string>
    <string name="action_olvidar">He olvidado el usuario y/o la clave</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="bienvenida">"Bienvenida !"</string>
    <string name="usuario_incorrecto">Usuario incorrecto</string>
    <string name="clave_incorrecta">Clave debe tener más de 5 caracteres</string>
    <string name="inicio_sesion_incorrecta">"Acceso denegado"</string>
    <string name="lblfecha">Fecha</string>
    <string name="lblnuevo_perro">NUEVO PERRO</string>
    <string name="lblnombre">Nombre</string>
    <string name="lblesterilizado">Esterilizado</string>
    <string name="lblAceptar">ACEPTAR</string>
</resources>
